--- a/docs/docs/integrations/tools/dataherald.ipynb
+++ b/docs/docs/integrations/tools/dataherald.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataherald = DataheraldAPIWrapper(db_connection_id=\"65fb766367dd22c99ce1a12d\")"
+    "dataherald = DataheraldAPIWrapper()"
    ]
   },
   {
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "dataherald.run(\"How many employees are in the company?\")"
+    "dataherald.run(\"How many employees are in the company?\", \"65fb766367dd22c99ce1a12d\")"
    ]
   },
   {
